# hal

./: .gitignore  Cargo.toml
patches/songbird-0.4.1/: .cargo_vcs_info.json  Cargo.toml
patches/songbird-0.4.1/src/: lib.rs
patches/songbird-0.4.1/src/events/: store.rs
patches/songbird-0.4.1/src/input/sources/: ytdl.rs
src/: main.rs
src/commands/: general.rs  mod.rs  music.rs  music_util.rs  ytdl.rs
src/util/: config.rs  mod.rs  typemap.rs
