[package]
name = "hal-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
clap = { version = "4.5.4", features = ["derive"] }
google-youtube3 = "5.0.4"
reqwest = "0.11.27"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serenity = { version = "0.12.1", features = ["cache"] }
songbird = { version = "0.4.1", features = ["builtin-queue", "serenity"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

[patch.crates-io]
songbird = { path = "../patches/songbird-0.4.1"}
